--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <a href="CursoCSS/Leccion12_Overflow_y_Float/index.html">Lección 12 Overflow + Float</a>
       <a href="CursoCSS/Leccion13_Display_Inline+Block/index.html">Lección 13 Display: Inline + Block</a>
       <a href="CursoCSS/Leccion14_Selectores_Combinados/index.html">Lección 14 Selectores Combinados</a>
+      <a href="CursoCSS/Leccion15_Pseudo_Clases/index.html">Lección 15 Pseudo Clases</a>
+      <a href="CursoCSS/Leccion16_Pseudo_Elementos/index.html">Lección 16 Pseudo Elementos</a>
+      <a href="CursoCSS/Leccion17_Transparencia_CSS/index.html">Lección 17 Transparencia CSS</a>
     </fieldset>
   </div>
   <footer>
