Unos capítulos más..

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <a href="CursoCSS/Leccion15_Pseudo_Clases/index.html">Lección 15 Pseudo Clases</a>
       <a href="CursoCSS/Leccion16_Pseudo_Elementos/index.html">Lección 16 Pseudo Elementos</a>
       <a href="CursoCSS/Leccion17_Transparencia_CSS/index.html">Lección 17 Transparencia CSS</a>
+      <a href="CursoCSS/Leccion18_Gradientes_CSS/index.html">Lección 18 Gradientes en CSS</a>
+      <a href="CursoCSS/Leccion19_Sombras_CSS/index.html">Lección 19 Sombras en CSS</a>
+      <a href="CursoCSS/Leccion20_Flexbox_CSS/index.html">Lección 20 Flexbox en CSS</a>
     </fieldset>
   </div>
   <footer>
