--- a/CursoCSS/Leccion17_Transparencia_CSS/index.html
+++ b/CursoCSS/Leccion17_Transparencia_CSS/index.html
@@ -11,7 +11,7 @@
         <div class="nav-buttons">
             <a href="../Leccion16_Pseudo_Elementos/index.html" class="btn">Atrás: Lección 16</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion18" class="btn">Siguiente: Lección 18</a>
+            <a href="../Leccion18_Gradientes_CSS/index.html" class="btn">Siguiente: Lección 18</a>
         </div>
     </header>
     <h1>Transparencia en CSS</h1>
