--- a/CursoCSS/Leccion20_Flexbox_CSS/index.html
+++ b/CursoCSS/Leccion20_Flexbox_CSS/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox en CSS</title>
+    <link rel="stylesheet" href="CSS/Styles.css">
 </head>
 <body>
     <header>
         <div class="nav-buttons">
-            <a href="../Leccion18_Gradientes_CSS/index.html" class="btn">Atrás: Lección 18</a>
+            <a href="../Leccion19_Sombras_CSS/index.html" class="btn">Atrás: Lección 19</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion20_Flexbox_CSS/index.html" class="btn">Siguiente: Lección 20</a>
+            <a href="../Leccion21" class="btn">Siguiente: Lección 21</a>
         </div>
     </header>
+    <h1>Flexbox en CSS</h1>
+    <div class="contenedor">
+        <p style="order:3; flex-grow: 1;">Texto 1</p>
+        <p style="order:2; flex-grow: 1;">Texto 2</p>
+        <p style="order:1; flex-grow: 5;">Texto 3</p>
+    </div>
 </body>
 </html>
